--- a/Mushrooms/Mushrooms/Mushrooms.vcxproj.filters
+++ b/Mushrooms/Mushrooms/Mushrooms.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="Oomycetes.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Really_mushroom.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Ascomycetes.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Mushrooms.h">
@@ -33,6 +39,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Oomycetes.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Really_mushroom.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Ascomycetes.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
